--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/theme-common": "^2.4.1",
     "@easyops-cn/docusaurus-search-local": "^0.48.5",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
